# pkg/routes/admin.go
@@ -3,11 +3,12 @@ package routes
 import (
 	"main/pkg/api/handler"
 	"main/pkg/api/middleware"
+
 	"github.com/gin-gonic/gin"
 )
 
-func AdminRoutes(engine *gin.RouterGroup, adminHandler *handler.AdminHandler, /*userHandler *handler.UserHandler,*/categoryHandler *handler.CategoryHandler, inventoryHandler *handler.InventoryHandler, orderHandler *handler.OrderHandler,paymentHandler *handler.PaymentHandler,offerHandler *handler.OfferHandler, couponHandler *handler.CouponHandler) {
-	engine.POST("/adminlogin", adminHandler.LoginHandler )
+func AdminRoutes(engine *gin.RouterGroup, adminHandler *handler.AdminHandler /*userHandler *handler.UserHandler,*/, categoryHandler *handler.CategoryHandler, inventoryHandler *handler.InventoryHandler, orderHandler *handler.OrderHandler, paymentHandler *handler.PaymentHandler, offerHandler *handler.OfferHandler, couponHandler *handler.CouponHandler) {
+	engine.POST("/adminlogin", adminHandler.LoginHandler)
 
 	engine.Use(middleware.AdminAuthMiddleware)
 	{
@@ -20,7 +21,7 @@ func AdminRoutes(engine *gin.RouterGroup, adminHandler *handler.AdminHandler, /*
 
 		categorymanagement := engine.Group("/category")
 		{
-			categorymanagement.GET("/",categoryHandler.Categories)
+			categorymanagement.GET("/", categoryHandler.Categories)
 			categorymanagement.POST("/add", categoryHandler.AddCategory)
 			categorymanagement.PUT("/update", categoryHandler.UpdateCategory)
 			categorymanagement.DELETE("/delete", categoryHandler.DeleteCategory)
@@ -39,37 +40,39 @@ func AdminRoutes(engine *gin.RouterGroup, adminHandler *handler.AdminHandler, /*
 			orders.PUT("/edit/status", orderHandler.EditOrderStatus)
 			orders.GET("", orderHandler.AdminOrders)
 		}
-		paymentmethods:=engine.Group("/paymentmethods")
+		paymentmethods := engine.Group("/paymentmethods")
 		{
-			paymentmethods.GET("/",paymentHandler.GetPaymentMethods)
-			paymentmethods.POST("/add",paymentHandler.AddNewPaymentMethod)
-			paymentmethods.DELETE("/remove",paymentHandler.RemovePaymentMethod)
+			paymentmethods.GET("/", paymentHandler.GetPaymentMethods)
+			paymentmethods.POST("/add", paymentHandler.AddNewPaymentMethod)
+			paymentmethods.DELETE("/remove", paymentHandler.RemovePaymentMethod)
 		}
-		sales:=engine.Group("/sales")
+		sales := engine.Group("/sales")
 		{
-			sales.GET("/daily",orderHandler.AdminSalesDailyReport)
-			sales.GET("/weekly",orderHandler.AdminSalesWeeklyReport)
-			sales.GET("/monthly",orderHandler.AdminSalesMonthlyReport)
-			sales.GET("/annual",orderHandler.AdminSalesAnnualReport)
-			sales.POST("/custom",orderHandler.AdminSalesCustomReport)
+			sales.GET("/daily", orderHandler.AdminSalesDailyReport)
+			sales.GET("/weekly", orderHandler.AdminSalesWeeklyReport)
+			sales.GET("/monthly", orderHandler.AdminSalesMonthlyReport)
+			sales.GET("/annual", orderHandler.AdminSalesAnnualReport)
+			sales.POST("/custom", orderHandler.AdminSalesCustomReport)
 		}
-		products:=engine.Group("/products")
+		products := engine.Group("/products")
 		{
 			products.GET("", inventoryHandler.AdminListProducts)
 			products.GET("/details", inventoryHandler.ShowIndividualProducts)
 			products.GET("/search", inventoryHandler.SearchProducts)
 			products.GET("/category", inventoryHandler.GetCategoryProducts)
 		}
-		offers:=engine.Group("/offers")
+		offers := engine.Group("/offers")
 		{
-			offers.POST("/create",offerHandler.AddOffer)
-			offers.POST("/expire",offerHandler.ExpireValidity)
+			offers.GET("", offerHandler.Offers)
+			offers.POST("/create", offerHandler.AddOffer)
+			offers.POST("/expire", offerHandler.ExpireValidity)
 		}
 
-		coupons:=engine.Group("/coupons")
+		coupons := engine.Group("/coupons")
 		{
-			coupons.POST("/create",couponHandler.CreateNewCoupon)
-			coupons.POST("/expire",couponHandler.MakeCouponInvalid)
+			coupons.GET("", couponHandler.Coupons)
+			coupons.POST("/create", couponHandler.CreateNewCoupon)
+			coupons.POST("/expire", couponHandler.MakeCouponInvalid)
 		}
 	}
 }
